frontend/src/views/LandingView/LandingView.scss
.landing {
   background-color: #FBF6EC;
   min-height: 100vh;
}
.container {
  font-weight: bold;
  background-color: #FBF6EC;
  height: 87%;
  background-size: cover; /* for IE9+, Safari 4.1+, Chrome 3.0+, Firefox 3.6+ */
  -webkit-background-size: cover; /* for Safari 3.0 - 4.0 , Chrome 1.0 - 3.0 */
  -moz-background-size: cover; /* optional for Firefox 3.6 */
  -o-background-size: cover; /* for Opera 9.5 */
  margin: 0; /* to remove the default white margin of body */
  padding: 0; /* to remove the default white margin of body */
  overflow: hidden;
}

.footer {
    font-size: 20px;
    background-color: #FBF6EC;
    color: #FFFFFF;
    height: 10%;
}

.dash {
  display: block;
  width: 100%;
  
}

a:link {
   background-color: rebeccapurple;
}

